--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "nonodegree_would_you_rather",
+  "name": "would_you_rather_game",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://hassan177.github.io/would-you-rather-game",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -17,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
